--- a/02_research_design_and_pandas/py/Numpy.ipynb
+++ b/02_research_design_and_pandas/py/Numpy.ipynb
@@ -10,7 +10,8 @@
     "* ndarray\n",
     "* Indexing and Slicing\n",
     "\n",
-    "More info: [http://wiki.scipy.org/Tentative_NumPy_Tutorial](http://wiki.scipy.org/Tentative_NumPy_Tutorial)\n"
+    "More info: [http://wiki.scipy.org/Tentative_NumPy_Tutorial](http://wiki.scipy.org/Tentative_NumPy_Tutorial)\n",
+    "\n"
    ]
   },
   {
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -58,25 +59,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "?np.mean()"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Creating arrays:\n",
-    "    a = np.zeros((3))\n",
-    "    b = np.ones((2,3))\n",
+    "    a = np.zeros(   3  ) \n",
+    "    b = np.ones(  (2,3)  )\n",
     "    c = np.arange(0,11,1)\n",
     "    d = np.random.randint(1,10,(2,5))\n",
     "    e = np.arange(10)**2\n",
     "    f = np.array(['Patriots','Saints','Red Sox','Yankees','Ford','Honda'])\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.5\n",
+      "['Patriots' 'Saints' 'Red Sox' 'Yankees' 'Ford' 'Honda']\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.mean( np.arange(10) )\n",
+    "print(a)\n",
+    "f = np.array(['Patriots','Saints','Red Sox','Yankees','Ford','Honda'])\n"
    ]
   },
   {
@@ -116,11 +141,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, -2, 3, -4, 5]\n",
+      "[ 1 -2  3 -4  5]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Python list\n",
     "a = [1,-2,3,-4,5]\n",
@@ -128,9 +172,9 @@
     "# Numpy array\n",
     "b = np.array([1,-2,3,-4,5])\n",
     "\n",
-    "# print(a)\n",
-    "# print(b)\n",
-    "# argmax(a)\n",
+    "print(a)\n",
+    "print(b)\n",
+    "np.argmax(a)\n",
     "# np.argmax(b)"
    ]
   },
@@ -143,34 +187,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[[5, 3, 8, 1],\n",
-       "        [2, 3, 4, 4],\n",
-       "        [1, 5, 3, 4]],\n",
-       "\n",
-       "       [[8, 3, 7, 7],\n",
-       "        [3, 5, 8, 1],\n",
-       "        [2, 5, 1, 5]]])"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a: [ 0  2  4  6  8 10 12 14 16 18] \n",
+      "a[5]: 10 \n",
+      "a[2:5]: [4 6 8] \n"
+     ]
     }
    ],
    "source": [
     "a = np.arange(0,20,2)\n",
-    "# print(\"a: %s \"% a)\n",
-    "# print(\"a[0]: %s \"% a[0])\n",
-    "# print(\"a[2:5]: %s \"% a[2:5])\n",
-    "d.random.randint()"
+    "print(\"a: %s \"% a)\n",
+    "print(\"a[5]: %s \"% a[5])\n",
+    "print(\"a[2:5]: %s \"% a[2:5])\n"
    ]
   },
   {
@@ -194,6 +230,93 @@
     "* Create a uniform subdivision of the interval [-1.3, 2.5] with 64 subdivisions (hint: use np.linspace() )\n",
     "\n",
     "and more [100 Numpy exercises](http://www.labri.fr/perso/nrougier/teaching/numpy.100/)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "?np.linspace()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[   0.           33.33333333   66.66666667  100.        ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.linspace(0, 100, 4)\n",
+    "print(a)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "* Create a random vector of size 30 and find the mean value (★☆☆)\n",
+    "\n",
+    "Z = np.random.random(30)\n",
+    "m = Z.mean()\n",
+    "print(m)\n",
+    "\n",
+    "\n",
+    "* Create a uniform subdivision of the interval [-1.3, 2.5] with 64 subdivisions\n",
+    "\n",
+    "a = np.linspace(-1.3, 2.5, 64)\n",
+    "\n",
+    "* Inverse an array\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  0.   5.  10.]\n",
+      "inverse of a: [ 10.   5.   0.] \n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.linspace(0, 10, 3)\n",
+    "print(a)\n",
+    "b = a[::-1]\n",
+    "print(\"inverse of a: %s \" % b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "?np.random.exponential\n"
    ]
   },
   {
