Lesson 4 Statistical Inference

--- a/04_statistics_inference/py/Lesson 4 - Notebook 1 - Linear Regression.ipynb
+++ b/04_statistics_inference/py/Lesson 4 - Notebook 1 - Linear Regression.ipynb
@@ -294,6 +294,110 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Anscombe's quartet \n",
+    "https://en.wikipedia.org/wiki/Anscombe%27s_quartet\n",
+    "\n",
+    "![Anscombe's quartet ](../img/Anscombe_quartet_3.svg)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Multi linear regression\n",
+    "Use gre, gpa and prestige to predict admission\n",
+    "\n",
+    "$$ admit = a * GRE + b * GPA + c * Prestige + d $$\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                  admit   R-squared:                       0.095\n",
+      "Model:                            OLS   Adj. R-squared:                  0.088\n",
+      "Method:                 Least Squares   F-statistic:                     13.69\n",
+      "Date:                Sun, 26 Jun 2016   Prob (F-statistic):           1.65e-08\n",
+      "Time:                        13:48:55   Log-Likelihood:                -239.99\n",
+      "No. Observations:                 397   AIC:                             488.0\n",
+      "Df Residuals:                     393   BIC:                             503.9\n",
+      "Df Model:                           3                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [95.0% Conf. Int.]\n",
+      "------------------------------------------------------------------------------\n",
+      "Intercept      0.2650      0.110      2.408      0.016         0.049     0.481\n",
+      "gre            0.2519      0.122      2.063      0.040         0.012     0.492\n",
+      "gpa            0.2544      0.111      2.296      0.022         0.037     0.472\n",
+      "prestige      -0.1097      0.024     -4.606      0.000        -0.156    -0.063\n",
+      "==============================================================================\n",
+      "Omnibus:                      191.690   Durbin-Watson:                   1.939\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):               51.364\n",
+      "Skew:                           0.670   Prob(JB):                     7.02e-12\n",
+      "Kurtosis:                       1.855   Cond. No.                         19.1\n",
+      "==============================================================================\n",
+      "\n",
+      "Warnings:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Regression model\n",
+    "lm = smf.ols(formula='admit ~ gre + gpa + prestige', data=df).fit()\n",
+    "\n",
+    "# Result\n",
+    "print(lm.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Intercept    0.264989\n",
+       "gre          0.251882\n",
+       "gpa          0.254429\n",
+       "prestige    -0.109666\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lm.params"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "    admit = 0.25 * GRE + 0.25 * GPA  - 0.11 * Prestige + 0.26\n",
+    "$$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
