--- a/03_statistics_fundamentals/py/Explore Online Retail Lab - Solutions.ipynb
+++ b/03_statistics_fundamentals/py/Explore Online Retail Lab - Solutions.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -50,7 +50,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +61,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -69,17 +87,17 @@
     {
      "data": {
       "text/plain": [
-       "(530106, 8)"
+       "(530104, 8)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Rm negative quantities and Unit Prices of 0\n",
-    "cond = (df.Quantity<= 0) | (df.UnitPrice == 0)\n",
+    "cond = (df.Quantity<= 0) | (df.UnitPrice <= 0)\n",
     "df[cond].shape\n",
     "df = df[~cond]\n",
     "df.shape\n"
@@ -87,7 +105,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "InvoiceNo           0\n",
+       "StockCode           0\n",
+       "Description         0\n",
+       "Quantity            0\n",
+       "InvoiceDate         0\n",
+       "UnitPrice           0\n",
+       "CustomerID     132220\n",
+       "Country             0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df.UnitPrice.isnull()].shape\n",
+    "df.isnull().sum()\n",
+    "# df = df.dropna(subset=['CustomerID','UnitPrice'])\n",
+    "# df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -98,7 +149,7 @@
        "(397884, 8)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -132,43 +183,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>397884.000000</td>\n",
-       "      <td>397884.000000</td>\n",
+       "      <td>530106.000000</td>\n",
+       "      <td>530106.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>12.988238</td>\n",
-       "      <td>3.116488</td>\n",
+       "      <td>10.542001</td>\n",
+       "      <td>3.865875</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>179.331775</td>\n",
-       "      <td>22.097877</td>\n",
+       "      <td>155.523831</td>\n",
+       "      <td>41.856120</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
        "      <td>1.000000</td>\n",
-       "      <td>0.001000</td>\n",
+       "      <td>-11062.060000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>2.000000</td>\n",
+       "      <td>1.000000</td>\n",
        "      <td>1.250000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>6.000000</td>\n",
-       "      <td>1.950000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>2.080000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>12.000000</td>\n",
-       "      <td>3.750000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>4.130000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
        "      <td>80995.000000</td>\n",
-       "      <td>8142.750000</td>\n",
+       "      <td>13541.330000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -176,17 +227,17 @@
       ],
       "text/plain": [
        "            Quantity      UnitPrice\n",
-       "count  397884.000000  397884.000000\n",
-       "mean       12.988238       3.116488\n",
-       "std       179.331775      22.097877\n",
-       "min         1.000000       0.001000\n",
-       "25%         2.000000       1.250000\n",
-       "50%         6.000000       1.950000\n",
-       "75%        12.000000       3.750000\n",
-       "max     80995.000000    8142.750000"
+       "count  530106.000000  530106.000000\n",
+       "mean       10.542001       3.865875\n",
+       "std       155.523831      41.856120\n",
+       "min         1.000000  -11062.060000\n",
+       "25%         1.000000       1.250000\n",
+       "50%         3.000000       2.080000\n",
+       "75%        10.000000       4.130000\n",
+       "max     80995.000000   13541.330000"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,30 +248,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.5\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "(375216, 8)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.UnitPrice.quantile(0.95)\n",
+    "print(df.UnitPrice.quantile(0.95))\n",
     "df[df.UnitPrice < df.UnitPrice.quantile(0.95)].shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -231,7 +289,7 @@
        "(351957, 8)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
