--- a/04_statistics_inference/py/ordinary_least_squares_in_python.ipynb
+++ b/04_statistics_inference/py/ordinary_least_squares_in_python.ipynb
@@ -66,7 +66,7 @@
     {
      "data": {
       "text/html": [
-       "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+       "<div>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -83,53 +83,53 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1947</th>\n",
-       "      <td> 83.0</td>\n",
-       "      <td> 234.289</td>\n",
-       "      <td> 235.6</td>\n",
-       "      <td> 159.0</td>\n",
-       "      <td> 107.608</td>\n",
-       "      <td> 1947</td>\n",
-       "      <td> 60.323</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>234.289</td>\n",
+       "      <td>235.6</td>\n",
+       "      <td>159.0</td>\n",
+       "      <td>107.608</td>\n",
+       "      <td>1947</td>\n",
+       "      <td>60.323</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1948</th>\n",
-       "      <td> 88.5</td>\n",
-       "      <td> 259.426</td>\n",
-       "      <td> 232.5</td>\n",
-       "      <td> 145.6</td>\n",
-       "      <td> 108.632</td>\n",
-       "      <td> 1948</td>\n",
-       "      <td> 61.122</td>\n",
+       "      <td>88.5</td>\n",
+       "      <td>259.426</td>\n",
+       "      <td>232.5</td>\n",
+       "      <td>145.6</td>\n",
+       "      <td>108.632</td>\n",
+       "      <td>1948</td>\n",
+       "      <td>61.122</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1949</th>\n",
-       "      <td> 88.2</td>\n",
-       "      <td> 258.054</td>\n",
-       "      <td> 368.2</td>\n",
-       "      <td> 161.6</td>\n",
-       "      <td> 109.773</td>\n",
-       "      <td> 1949</td>\n",
-       "      <td> 60.171</td>\n",
+       "      <td>88.2</td>\n",
+       "      <td>258.054</td>\n",
+       "      <td>368.2</td>\n",
+       "      <td>161.6</td>\n",
+       "      <td>109.773</td>\n",
+       "      <td>1949</td>\n",
+       "      <td>60.171</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1950</th>\n",
-       "      <td> 89.5</td>\n",
-       "      <td> 284.599</td>\n",
-       "      <td> 335.1</td>\n",
-       "      <td> 165.0</td>\n",
-       "      <td> 110.929</td>\n",
-       "      <td> 1950</td>\n",
-       "      <td> 61.187</td>\n",
+       "      <td>89.5</td>\n",
+       "      <td>284.599</td>\n",
+       "      <td>335.1</td>\n",
+       "      <td>165.0</td>\n",
+       "      <td>110.929</td>\n",
+       "      <td>1950</td>\n",
+       "      <td>61.187</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1951</th>\n",
-       "      <td> 96.2</td>\n",
-       "      <td> 328.975</td>\n",
-       "      <td> 209.9</td>\n",
-       "      <td> 309.9</td>\n",
-       "      <td> 112.075</td>\n",
-       "      <td> 1951</td>\n",
-       "      <td> 63.221</td>\n",
+       "      <td>96.2</td>\n",
+       "      <td>328.975</td>\n",
+       "      <td>209.9</td>\n",
+       "      <td>309.9</td>\n",
+       "      <td>112.075</td>\n",
+       "      <td>1951</td>\n",
+       "      <td>63.221</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
