--- a/04_statistics_inference/py/Lesson 4 - Notebook 2 - Linear Regression for Causal Inference.ipynb
+++ b/04_statistics_inference/py/Lesson 4 - Notebook 2 - Linear Regression for Causal Inference.ipynb
@@ -1207,7 +1207,9 @@
     "collapsed": true
    },
    "source": [
-    "# confidence interval"
+    "# confidence interval\n",
+    "\n",
+    "http://statsmodels.sourceforge.net/devel/examples/notebooks/generated/ols.html"
    ]
   },
   {
