--- a/04_statistics_inference/py/Lesson 4 - Notebook 1 - Linear Regression.ipynb
+++ b/04_statistics_inference/py/Lesson 4 - Notebook 1 - Linear Regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -12,6 +12,8 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
+    "\n",
+    "# Disable warnings\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
    ]
