L6 notebooks ridge, lasso, polynomial

--- a/06_scikit_regression/py/L6 Linear Regression Scikit.ipynb
+++ b/06_scikit_regression/py/L6 Linear Regression Scikit.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 237,
    "metadata": {
     "collapsed": false
    },
@@ -21,7 +21,7 @@
     "import pandas as pd\n",
     "from sklearn import linear_model\n",
     "import matplotlib.pyplot as plt\n",
-    "import warnings\n",
+    "import warningsgs\n",
     "warnings.simplefilter(action = \"ignore\", category = FutureWarning)\n",
     "\n",
     "%matplotlib inline\n"
@@ -31,7 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Instantiate a new LieanRegression model\n",
+    "1. Instantiate a new LinearRegression model\n",
     "2. set some fake data\n",
     "3. fit the model\n",
     "4. results"
@@ -345,6 +345,53 @@
    "metadata": {},
    "source": [
     "Solution: [linear_regression_with_scikit_lean_solution.py](linear_regression_with_scikit_lean_solution.py)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 235,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  1.55267723e-17])"
+      ]
+     },
+     "execution_count": 235,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# pvalues\n",
+    "from sklearn import feature_selection, linear_model\n",
+    "pvals = feature_selection.f_regression(X, y)[1]\n",
+    "pvals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([ 103.87403621]), array([  1.55267723e-17]))"
+      ]
+     },
+     "execution_count": 236,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feature_selection.f_regression(X, y)"
    ]
   },
   {
