--- a/05_visualization/py/Lesson 5 Lab 1.ipynb
+++ b/05_visualization/py/Lesson 5 Lab 1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -238,6 +238,40 @@
     "Include labels for the x- and y-axes, and a legend explaining which line is which plot.\n",
     "\n",
     "Save the plot as a .jpg (“Jpeg”) file\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAsUAAAFwCAYAAABQJAZDAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAExZJREFUeJzt3X+I7fdd5/HXe+/tCoXbrRIomFzRXUO3XWi3itHVHXsl\nBa/5w4ALK/HH4g8wCJH9z2j/0CziFf9ZRCrZbIjFv8wfKmx2CQkL9eJQ2tSKSds1tyRq4N5Eiq21\nXKR/3Evf+8dMwzi9d86Zc8/M5Mz78YDAnPl+e+bz6Zy8eeY750d1dwAAYLJ/cdILAACAkyaKAQAY\nTxQDADCeKAYAYDxRDADAeKIYAIDxFkZxVf1+VX2hqj57wDm/W1WvVNVLVfWB9S4RgGWZ2QCrWeZK\n8UeTXLzdwap6IMl3dve9SX4hyeNrWhsAh2dmA6xgYRR393aSLx9wyo8m+YPdc19I8s6qetd6lgfA\nYZjZAKtZx3OK705ydc/ta0nuWcP9ArB+ZjbALazrhXa177bPjgZ46zKzAfY5u4b7eD3J+T2379n9\n3j9TVYYusLG6e39IbiozGxjhsHN7HVH8TJJHkjxdVd+X5B+7+wu3OvH69Vkz9tKlx/LhDz920ss4\nVvZ8+k3bb5KcO3daejiJmX1bEx/b9jzDxD2vMrcXRnFV/WGSDya5q6quJvn1JG9Lku5+orufraoH\nqurVJP+U5GcPvQoA1sLMBljNwiju7oeWOOeR9SwHgDthZgOsxifaHaGtrQsnvYRjZ8+n37T9MsfE\nx7Y9zzBxz6uo7uN5zlhV9bTnpwGnw7lzdZpeaLcUMxvYZKvMbVeKAQAYTxQDADCeKAYAYDxRDADA\neKIYAIDxRDEAAOOJYgAAxhPFAACMJ4oBABhPFAMAMJ4oBgBgPFEMAMB4ohgAgPFEMQAA44liAADG\nE8UAAIwnigEAGE8UAwAwnigGAGA8UQwAwHiiGACA8UQxAADjiWIAAMYTxQAAjCeKAQAYTxQDADCe\nKAYAYDxRDADAeKIYAIDxRDEAAOOJYgAAxhPFAACMJ4oBABhPFAMAMJ4oBgBgPFEMAMB4ohgAgPFE\nMQAA44liAADGE8UAAIwnigEAGE8UAwAwnigGAGA8UQwAwHiiGACA8UQxAADjiWIAAMYTxQAAjCeK\nAQAYTxQDADCeKAYAYDxRDADAeKIYAIDxRDEAAOOJYgAAxhPFAACMtzCKq+piVV2pqleq6tFbHL+r\nqp6rqher6nNV9TNHslIAlmJuAxxedfftD1adSfL5JB9K8nqSP0/yUHe/vOecx5J8U3f/alXdtXv+\nu7r75r776uvXb/+zAN6qzp2rdHed9DqWsa65bWYDm2yVub3oSvF9SV7t7te6+0aSp5M8uO+cv0vy\njt2v35HkS/uDGIBjY24DrODsguN3J7m65/a1JN+775wnk3ysqt5Ici7Jf17f8gA4JHMbYAWLrhQv\n87ezDyd5sbu/Ncm/T/J7VXXujlcGwCrMbYAVLLpS/HqS83tun8/OVYe9vj/JbyZJd/91Vf1tkncn\n+fT+O7t06bE3v97aupCtrQuHXjDAUdvevpzt7csnvYxVrW1um9nApljH3F70Qruz2XkBxv1J3kjy\nqXzjCzb+e5KvdPd/q6p3JfmLJO/r7n/Yd19etAFspA17od1a5raZDWyyVeb2gVeKu/tmVT2S5Pkk\nZ5I81d0vV9XDu8efSHIpyUer6qXsPB3jl/cHMQDHw9wGWM2BV4rX+oNcdQA21CZdKV4XMxvYZEfx\nlmwAAHDqiWIAAMYTxQAAjCeKAQAYTxQDADCeKAYAYDxRDADAeKIYAIDxRDEAAOOJYgAAxhPFAACM\nJ4oBABhPFAMAMJ4oBgBgPFEMAMB4ohgAgPFEMQAA44liAADGE8UAAIwnigEAGE8UAwAwnigGAGA8\nUQwAwHiiGACA8UQxAADjiWIAAMYTxQAAjCeKAQAYTxQDADCeKAYAYDxRDADAeKIYAIDxRDEAAOOJ\nYgAAxhPFAACMJ4oBABhPFAMAMJ4oBgBgPFEMAMB4ohgAgPFEMQAA44liAADGE8UAAIwnigEAGE8U\nAwAwnigGAGA8UQwAwHiiGACA8UQxAADjiWIAAMYTxQAAjCeKAQAYTxQDADCeKAYAYDxRDADAeKIY\nAIDxRDEAAOOJYgAAxlsYxVV1saquVNUrVfXobc65UFV/WVWfq6rLa18lAEsxswFWU919+4NVZ5J8\nPsmHkrye5M+TPNTdL+85551JPp7kh7v7WlXd1d1fvMV99fXrt/9ZAG9V585VurtOeh2LmNkAO1aZ\n24uuFN+X5NXufq27byR5OsmD+875iSR/3N3XkuRWwxWAY2FmA6xoURTfneTqntvXdr+3171JvqWq\n/rSqPl1VP73OBQKwNDMbYEVnFxxf5m9nb0vyXUnuT/L2JJ+oqk929yt3ujgADsXMBljRoih+Pcn5\nPbfPZ+fKw15Xk3yxu7+a5KtV9WdJ3p/kGwbspUuPvfn11taFbG1dOPyKAY7Y9vblbG9fPullrMLM\nBkZax9xe9EK7s9l50cb9Sd5I8ql844s2/m2SjyT54STflOSFJD/e3X+17768aAPYSBv0QjszGyCr\nze0DrxR3982qeiTJ80nOJHmqu1+uqod3jz/R3Veq6rkkn0nytSRP7h+uABw9MxtgdQdeKV7rD3LV\nAdhQm3KleJ3MbGCTHcVbsgEAwKknigEAGE8UAwAwnigGAGA8UQwAwHiiGACA8UQxAADjiWIAAMYT\nxQAAjCeKAQAYTxQDADCeKAYAYDxRDADAeKIYAIDxRDEAAOOJYgAAxhPFAACMJ4oBABhPFAMAMJ4o\nBgBgPFEMAMB4ohgAgPFEMQAA44liAADGE8UAAIwnigEAGE8UAwAwnigGAGA8UQwAwHiiGACA8UQx\nAADjiWIAAMYTxQAAjCeKAQAYTxQDADCeKAYAYDxRDADAeKIYAIDxRDEAAOOJYgAAxhPFAACMJ4oB\nABhPFAMAMJ4oBgBgPFEMAMB4ohgAgPFEMQAA44liAADGE8UAAIwnigEAGE8UAwAwnigGAGA8UQwA\nwHiiGACA8UQxAADjiWIAAMYTxQAAjCeKAQAYb2EUV9XFqrpSVa9U1aMHnPc9VXWzqn5svUsEYFlm\nNsBqDoziqjqT5CNJLiZ5b5KHquo9tznvt5M8l6SOYJ0ALGBmA6xu0ZXi+5K82t2vdfeNJE8nefAW\n5/1Skj9K8vdrXh8AyzOzAVa0KIrvTnJ1z+1ru997U1XdnZ2h+/jut3ptqwPgMMxsgBUtiuJlhuXv\nJPmV7u7s/BnOn+IAToaZDbCiswuOv57k/J7b57Nz5WGv707ydFUlyV1JfqSqbnT3M/vv7NKlx978\nemvrQra2Lhx+xQBHbHv7cra3L5/0MlZhZgMjrWNu187FgtscrDqb5PNJ7k/yRpJPJXmou1++zfkf\nTfK/u/tPbnGsr1/3Vzpg85w7V+nut/wVVTMbYMcqc/vAK8XdfbOqHknyfJIzSZ7q7per6uHd40+s\nvFoA1srMBljdgVeK1/qDXHUANtSmXCleJzMb2GSrzG2faAcAwHiiGACA8UQxAADjiWIAAMYTxQAA\njCeKAQAYTxQDADCeKAYAYDxRDADAeKIYAIDxRDEAAOOJYgAAxhPFAACMJ4oBABhPFAMAMJ4oBgBg\nPFEMAMB4ohgAgPFEMQAA44liAADGE8UAAIwnigEAGE8UAwAwnigGAGA8UQwAwHiiGACA8UQxAADj\niWIAAMYTxQAAjCeKAQAYTxQDADCeKAYAYDxRDADAeKIYAIDxRDEAAOOJYgAAxhPFAACMJ4oBABhP\nFAMAMJ4oBgBgPFEMAMB4ohgAgPFEMQAA44liAADGE8UAAIwnigEAGE8UAwAwnigGAGA8UQwAwHii\nGACA8UQxAADjiWIAAMYTxQAAjCeKAQAYTxQDADCeKAYAYDxRDADAeKIYAIDxloriqrpYVVeq6pWq\nevQWx3+yql6qqs9U1cer6n3rXyoAyzCzAQ5vYRRX1ZkkH0lyMcl7kzxUVe/Zd9rfJPnB7n5fkt9I\n8j/XvVAAFjOzAVazzJXi+5K82t2vdfeNJE8neXDvCd39ie7+yu7NF5Lcs95lArAkMxtgBctE8d1J\nru65fW33e7fz80mevZNFAbAyMxtgBWeXOKeXvbOq+qEkP5fkB1ZeEQB3wswGWMEyUfx6kvN7bp/P\nzpWHf2b3hRpPJrnY3V++1R1duvTYm19vbV3I1taFQywV4Hhsb1/O9vblk17GqsxsYJx1zO3qPvii\nQlWdTfL5JPcneSPJp5I81N0v7znn25J8LMlPdfcnb3M/ff360hcwAN4yzp2rdHed9DqWYWYDrDa3\nF14p7u6bVfVIkueTnEnyVHe/XFUP7x5/IsmvJfnmJI9XVZLc6O77DrsBAO6MmQ2wmoVXitf2g1x1\nADbUJl0pXhczG9hkq8xtn2gHAMB4ohgAgPFEMQAA44liAADGE8UAAIwnigEAGE8UAwAwnigGAGA8\nUQwAwHiiGACA8UQxAADjiWIAAMYTxQAAjCeKAQAYTxQDADCeKAYAYDxRDADAeKIYAIDxRDEAAOOJ\nYgAAxhPFAACMJ4oBABhPFAMAMJ4oBgBgPFEMAMB4ohgAgPFEMQAA44liAADGE8UAAIwnigEAGE8U\nAwAwnigGAGA8UQwAwHiiGACA8UQxAADjiWIAAMYTxQAAjCeKAQAYTxQDADCeKAYAYDxRDADAeKIY\nAIDxRDEAAOOJYgAAxhPFAACMJ4oBABhPFAMAMJ4oBgBgPFEMAMB4ohgAgPFEMQAA44liAADGE8UA\nAIwnigEAGE8UAwAwnigGAGA8UQwAwHiiGACA8RZGcVVdrKorVfVKVT16m3N+d/f4S1X1gfUvE4Bl\nmdsAh3dgFFfVmSQfSXIxyXuTPFRV79l3zgNJvrO7703yC0keP6K1bpzt7csnvYRjZ8+n37T9bhpz\ne3UTH9v2PMPEPa9i0ZXi+5K82t2vdfeNJE8neXDfOT+a5A+SpLtfSPLOqnrX2le6gSY+CO359Ju2\n3w1kbq9o4mPbnmeYuOdVLIriu5Nc3XP72u73Fp1zz50vDYAVmNsAK1gUxb3k/dSK/zsA1svcBlhB\ndd9+DlbV9yV5rLsv7t7+1SRf6+7f3nPO/0hyubuf3r19JckHu/sL++7LwAU2Vnfvj8i3pHXNbTMb\n2HSHndtnFxz/dJJ7q+rbk7yR5MeTPLTvnGeSPJLk6d1h/I/7g3iVhQGwkrXMbTMbmObAKO7um1X1\nSJLnk5xJ8lR3v1xVD+8ef6K7n62qB6rq1ST/lORnj3zVANySuQ2wmgOfPgEAABOs/RPtJr5p/KI9\nV9VP7u71M1X18ap630msc12W+R3vnvc9VXWzqn7sONd3FJZ8XF+oqr+sqs9V1eVjXuLaLfG4vquq\nnquqF3f3/DMnsMy1qarfr6ovVNVnDzjnVM2uxMyeMLOTeXPbzDazd8853Ozq7rX9k50/1b2a5NuT\nvC3Ji0nes++cB5I8u/v19yb55DrXcNz/LLnn/5DkX+1+fXGT97zMfvec97Ek/yfJfzrpdR/D7/id\nSf5fknt2b9910us+hj0/luS3vr7fJF9Kcvak134He95K8oEkn73N8VM1uw7xez5V+542s5fd857z\nNn5um9lm9u7xQ8+udV8pnvim8Qv33N2f6O6v7N58IZv9fqDL/I6T5JeS/FGSvz/OxR2RZfb8E0n+\nuLuvJUl3f/GY17huy+z575K8Y/frdyT5UnffPMY1rlV3byf58gGnnLbZlZjZE2Z2Mm9um9lmdrLC\n7Fp3FE980/hl9rzXzyd59khXdLQW7req7s7Ov4xf/+jYTX/i+jK/43uTfEtV/WlVfbqqfvrYVnc0\nltnzk0n+XVW9keSlJP/1mNZ2Uk7b7ErM7OT0z+xk3tw2s83sZIXZtegt2Q5r4pvGL732qvqhJD+X\n5AeObjlHbpn9/k6SX+nurqrKN/6+N80ye35bku9Kcn+Styf5RFV9srtfOdKVHZ1l9vzhJC9294Wq\n+jdJ/m9Vvb+7rx/x2k7SaZpdiZl9oFMys5N5c9vMvjUze8H/T+uO4teTnN9z+3x2yvygc+7Z/d6m\nWmbP2X2hxpNJLnb3QZf73+qW2e93Z+f9T5Od5y39SFXd6O5njmeJa7fMnq8m+WJ3fzXJV6vqz5K8\nP8mmDthl9vz9SX4zSbr7r6vqb5O8Ozvvk3sanbbZlZjZyemf2cm8uW1mm9nJCrNr3U+fePNN46vq\nX2bnTeP3/wv1TJL/krz5yUu3/LCPDbJwz1X1bUn+JMlPdferJ7DGdVq43+7+1939Hd39Hdl5ftov\nbuhg/bplHtf/K8l/rKozVfX27Dyp/6+OeZ3rtMyeryT5UJLsPk/r3Un+5lhXebxO2+xKzOwJMzuZ\nN7fNbDM7WWF2rfVKcQ980/hl9pzk15J8c5LHd/8r/EZ333dSa74TS+73VFnycX2lqp5L8pkkX0vy\nZHdv7IBd8vd8KclHq+ql7PwH9i939z+c2KLvUFX9YZIPJrmrqq4m+fXs/In1VM6uxMzOgJmdzJvb\nZraZvers8uEdAACMt/YP7wAAgE0jigEAGE8UAwAwnigGAGA8UQwAwHiiGACA8UQxAADjiWIAAMb7\n/1fm695dFyhJAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x1112812b0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "\n",
+    "fig, ax = plt.subplots(1,2,figsize=(12,6))\n",
+    "ax[0]\n",
+    "ax[1]\n",
+    "\n",
+    "\n",
+    "fig, [ax1, ax2] = plt.subplots(1,2,figsize=(12,6))\n",
+    "ax1\n",
+    "ax2\n"
    ]
   },
   {
