--- a/05_visualization/py/Lesson 5 Notebook 3 - Seaborn.ipynb
+++ b/05_visualization/py/Lesson 5 Notebook 3 - Seaborn.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -137,14 +137,14 @@
        "4       24.59  3.61  Female     No  Sun  Dinner     4"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "tips = sns.load_dataset(\"tips\")\n",
-    "tips.head()"
+    "tips.head()\n"
    ]
   },
   {
