L6 Notebooks and slides

--- a/06_scikit_regression/py/L6 OLS vs Ridge.ipynb
+++ b/06_scikit_regression/py/L6 OLS vs Ridge.ipynb
@@ -90,7 +90,9 @@
     "np.random.seed(0)\n",
     "# Create a dictionary of classifiers, OLS and RIdge\n",
     "\n",
-    "classifiers = dict( ols=linear_model.LinearRegression(fit_intercept=True), ridge=linear_model.Ridge(alpha=.1) )\n",
+    "classifiers = dict( ols=linear_model.LinearRegression(fit_intercept=True), \n",
+    "                   ridge=linear_model.Ridge(alpha=.1) \n",
+    "                  )\n",
     "\n",
     "fignum = 1\n",
     "# Loop over the 2 classifiers\n",
@@ -118,6 +120,7 @@
     "        ax.plot(X_test, clf.predict(X_test), color='.5')\n",
     "    \n",
     "    clf.fit(X_train, y_train)\n",
+    "    \n",
     "    ax.plot(X_test, clf.predict(X_test), linewidth=2, color='blue')\n",
     "    ax.scatter(X_train, y_train, s=30, c='r', marker='+', zorder=10)\n",
     "\n",
