--- a/06_scikit_regression/py/L6 Linear Regression Scikit.ipynb
+++ b/06_scikit_regression/py/L6 Linear Regression Scikit.ipynb
@@ -67,7 +67,7 @@
     "# true outcomes\n",
     "y = [0, 3, 6]\n",
     "\n",
-    "clf.fit (X, y)\n",
+    "clf.fit(X, y)\n",
     "print('---- \\nModel is:')\n",
     "print(clf)\n",
     "print(\"---- \\nWeights are: %s \"% clf.coef_ )\n"
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -162,7 +162,7 @@
        "array([-4.4853672 ,  5.46194195])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -183,10 +183,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x114bd3710>]"
+       "[<matplotlib.lines.Line2D at 0x114faf748>]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -194,7 +194,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAY0AAAEACAYAAABPiSrXAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAFhxJREFUeJzt3H+w3XWd3/HnqwSc7iZryLjNDzY20MIgVHdgFLFwNTDi\nQO0E2o6/ZqiZbrfjrI5QxqkE6CrTOjFmbEs7Xf5xw5rZjjiImgZokLtuotdpDRYSFJI0oDI1YiIg\nWS8dZoz13T/OF3J69t7rJ+dcuYTzfMzc4fP9fD7f7/mcD3PPK5/P93xvqgpJklr8jYUegCTp5GFo\nSJKaGRqSpGaGhiSpmaEhSWpmaEiSmg0dGkmWJZlMcjDJA0mWztBndZKdSR5L8miS6/rabk1yKMme\n7ufKrn5Nkhf66m8fdoySpPmVYZ/TSLIZeKaqNie5ETi9qjYM9FkBrKiqvUkWAw8BV1fVgSSfBKar\n6t8PnLMGuKeq3jjUwCRJvzGjbE+tA7Z25a3ANYMdqupwVe3tys8D+4Ez+rpkhNeXJL3MRgmN5VV1\npCsfAZbP1blbQVwA7O6r/miSR5JsGdjeOrPbmtqV5NIRxihJmkdzbk8lmQRWzNB0C7C1qk7v6/uz\nqlo2y3UWA7uAT1XVtq7ubwFPd13+LbCyqv55ktOA366q55JcCGwDzq+q6RN+d5KkebVorsaqumK2\ntiRHkqyoqsNJVgI/naXfqcCXgf/yYmB01/5pX58/Be7p6n8B/KIrP5zk+8DZwMMD1/WPZknSEKpq\n6FsDc4bGr7EdWA98pvvvtsEOSQJsAfZV1W0DbSur6ifd4T8CvtfVvw54rqr+b5Kz6AXGD2YawPS0\nuQGwceOt3HzzrQs9jFcE5+I45+I45+K4JUtGu5U8yj2NTcAVSQ4Cl3fHJFmV5L6uzyXAtcBlg1+t\nBT6T5LtJHgHeAdzQ1b8deCTJHuBLwIeq6ugI45QkzZOhVxpV9TPgnTPUPwW8uyt/i1mCqao+OEv9\nV4CvDDsuSdJvjk+EvwpMTKxd6CG8YjgXxzkXxzkX82foh/sWWpLynoYknZglSzLSjXBXGpKkZoaG\nJKmZoSFJamZoSJKaGRqSpGaGhiSpmaEhSWpmaEiSmhkakqRmhoYkqZmhIUlqZmhIkpoZGpKkZoaG\nJKmZoSFJamZoSJKaGRqSpGaGhiSpmaEhSWpmaEiSmhkakqRmQ4dGkmVJJpMcTPJAkqUz9FmdZGeS\nx5I8muS6gfaPJtnftX2mr/6mJI8nOZDkXcOOUZI0v0ZZaWwAJqvqHODr3fGgY8ANVXU+cDHwkSRv\nAEhyGbAOeFNV/T3gs139ecD7gPOAK4Hbk7gikqRXgFE+jNcBW7vyVuCawQ5Vdbiq9nbl54H9wKqu\n+Y+AT1fVsa796a7+auDOqjpWVU8CTwAXjTBOSdI8GSU0llfVka58BFg+V+cka4ALgN1d1dnA25N8\nO8muJG/u6lcBh/pOPQScMcI4JUnzZNFcjUkmgRUzNN3Sf1BVlaTmuM5i4G7g+m7F8eJrn15VFyd5\nC3AXcNYsl5jx2hs33vpSeWJiLRMTa2cbgiSNpampXUxN7Zq366Vq1s/6uU9MDgBrq+pwkpXAzqo6\nd4Z+pwL3Ajuq6ra++h3Apqr6Rnf8BL37Hn8IUFWbuvr7gU9W1e6B69b09HBjl6RxtWRJqKoMe/4o\n21PbgfVdeT2wbbBDkgBbgH39gdHZBlze9TsHOK2qnumu+/4kpyU5k9421oMjjFOSNE9GCY1NwBVJ\nDtL78H9xZbAqyX1dn0uAa4HLkuzpfq7q2u4AzkryPeBO4IMAVbWP3lbVPmAH8OEadjkkSZpXQ29P\nLTS3pyTpxC3k9pQkacwYGpKkZoaGJKmZoSFJamZoSJKaGRqSpGaGhiSpmaEhSWpmaEiSmhkakqRm\nhoYkqZmhIUlqZmhIkpoZGpKkZoaGJKmZoSFJamZoSJKaGRqSpGaGhiSpmaEhSWpmaEiSmhkakqRm\nhoYkqdnQoZFkWZLJJAeTPJBk6Qx9VifZmeSxJI8muW6g/aNJ9ndtn+nq1iR5Icme7uf2YccoSZpf\ni0Y4dwMwWVWbk9zYHW8Y6HMMuKGq9iZZDDyUZLKq9ie5DFgHvKmqjiX53b7znqiqC0YYmyTpN2CU\n7al1wNauvBW4ZrBDVR2uqr1d+XlgP7Cqa/4j4NNVdaxrf3qEsUiSXgajhMbyqjrSlY8Ay+fqnGQN\ncAGwu6s6G3h7km8n2ZXkzX3dz+y2pnYluXSEMUqS5tGc21NJJoEVMzTd0n9QVZWk5rjOYuBu4Ppu\nxfHia59eVRcneQtwF3AW8BSwuqqeS3IhsC3J+VU1PXjdjRtvfak8MbGWiYm1c70dSRo7U1O7mJra\nNW/XS9Wsn/Vzn5gcANZW1eEkK4GdVXXuDP1OBe4FdlTVbX31O4BNVfWN7vgJ4K1V9ezA+TuBj1XV\nwwP1NT093NglaVwtWRKqKsOeP8r21HZgfVdeD2wb7JAkwBZgX39gdLYBl3f9zgFOq6pnk7wuySld\n/Vn0trF+MMI4JUnzZJTQ2ARckeQgvQ//TQBJViW5r+tzCXAtcFnfV2iv6truAM5K8j3gTuCDXf3b\ngUeS7AG+BHyoqo6OME5J0jwZentqobk9JUknbiG3pyRJY8bQkCQ1MzQkSc0MDUlSM0NDktTM0JAk\nNTM0JEnNDA1JUjNDQ5LUzNCQJDUzNCRJzQwNSVIzQ0OS1MzQkCQ1MzQkSc0MDUlSM0NDktTM0JAk\nNTM0JEnNDA1JUjNDQ5LUzNCQJDUzNCRJzYYOjSTLkkwmOZjkgSRLZ+izOsnOJI8leTTJdX1tX0yy\np/v5YZI9fW03JXk8yYEk7xp2jJKk+ZWqGu7EZDPwTFVtTnIjcHpVbRjoswJYUVV7kywGHgKuqar9\nA/0+Cxytqk8lOQ/4AvAW4AzgL4BzqupXA+fU9PRwY5ekcbVkSaiqDHv+KNtT64CtXXkrcM1gh6o6\nXFV7u/LzwH5gVX+fJAHeC9zZVV0N3FlVx6rqSeAJ4KIRxilJmiejhMbyqjrSlY8Ay+fqnGQNcAGw\ne6BpAjhSVd/vjlcBh/raD9FbcUiSFtiiuRqTTAIrZmi6pf+gqirJrHtF3dbU3cD13Yqj3wfobUfN\nZcZrb9x460vliYm1TEys/TWXkaTxMjW1i6mpXfN2vVHuaRwA1lbV4SQrgZ1Vde4M/U4F7gV2VNVt\nA22L6K0kLqyqp7q6DQBVtak7vh/4ZFXtHjjXexqSdIIW8p7GdmB9V14PbBvs0N2v2ALsGwyMzjuB\n/S8GRt9135/ktCRnAmcDD44wTknSPBklNDYBVyQ5CFzeHZNkVZL7uj6XANcCl/V9vfaqvmu8j+M3\nwAGoqn3AXcA+YAfw4Rp2OSRJmldDb08tNLenJOnELeT2lCRpzBgakqRmhoYkqZmhIUlqZmhIkpoZ\nGpKkZoaGJKmZoSFJamZoSJKaGRqSpGaGhiSpmaEhSWpmaEiSmhkakqRmhoYkqZmhIUlqZmhIkpoZ\nGpKkZosWegCjWLJkoUcgSSeH6en5uc5JHRrzNQmSpDZuT0mSmhkakqRmhoYkqdnQoZFkWZLJJAeT\nPJBk6Qx9VifZmeSxJI8mua6v7YtJ9nQ/P0yyp6tfk+SFvrbbhx2jJGl+paqGOzHZDDxTVZuT3Aic\nXlUbBvqsAFZU1d4ki4GHgGuqav9Av88CR6vqU0nWAPdU1Rt/zevX9PRwY5ekcbVkSaiqDHv+KNtT\n64CtXXkrcM1gh6o6XFV7u/LzwH5gVX+fJAHeC9w5wlgkSS+DUUJjeVUd6cpHgOVzde5WEBcAuwea\nJoAjVfX9vrozu62pXUkuHWGMkqR5NOdzGkkmgRUzNN3Sf1BVlWTWvaJua+pu4PpuxdHvA8AX+o6f\nAlZX1XNJLgS2JTm/qv7aUxkbN976UnliYi0TE2vnejuSNHampnYxNbVr3q43yj2NA8DaqjqcZCWw\ns6rOnaHfqcC9wI6qum2gbRFwCLiwqp6a5XV2Ah+rqocH6r2nIUknaCHvaWwH1nfl9cC2wQ7d/Yot\nwL7BwOi8E9jfHxhJXpfklK58FnA28IMRxilJmiejhMYm4IokB4HLu2OSrEpyX9fnEuBa4LK+r9Be\n1XeN9/HXb4C/HXik+wrul4APVdXREcYpSZonQ29PLTS3pyTpxC3k9pQkacwYGpKkZoaGJKmZoSFJ\namZoSJKaGRqSpGaGhiSpmaEhSWpmaEiSmhkakqRmhoYkqZmhIUlqZmhIkpoZGpKkZoaGJKmZoSFJ\namZoSJKaGRqSpGaGhiSpmaEhSWpmaEiSmhkakqRmhoYkqdnQoZFkWZLJJAeTPJBk6Qx9VifZmeSx\nJI8mua6v7aIkDybZk+Q7Sd7S13ZTkseTHEjyrmHHKEmaX6OsNDYAk1V1DvD17njQMeCGqjofuBj4\nSJJzu7bNwB9X1QXAJ7pjkpwHvA84D7gSuD2JKyJJegUY5cN4HbC1K28FrhnsUFWHq2pvV34e2A+c\n0TX/BHhtV14K/LgrXw3cWVXHqupJ4AngohHGKUmaJ4tGOHd5VR3pykeA5XN1TrIGuADY3VVtAL6V\n5LP0wuttXf0q4Nt9px7ieNBIkhbQnKGRZBJYMUPTLf0HVVVJao7rLAbuBq7vVhwAW4DrquqrSd4D\n3AFcMcslZrz2xo23vlSemFjLxMTa2YYgSWNpamoXU1O75u16qZr1s37uE5MDwNqqOpxkJbCzqs6d\nod+pwL3Ajqq6ra/+51X1O105wNGqem2SDQBVtalrux/4ZFXtHrhuTU8PN3ZJGldLloSqyrDnj3JP\nYzuwviuvB7YNdujCYAuwrz8wOk8keUdXvhw42Hfd9yc5LcmZwNnAgyOMU5I0T0ZZaSwD7gJeDzwJ\nvLeqjiZZBXyuqt6d5FLgm8B3Ob7FdFNV3Z/kzcCfAK8BXgA+XFV7umvfDPwB8Et6W1pfm+H1XWlI\n0gkadaUxdGgsNENDkk7cQm5PSZLGjKEhSWpmaEiSmhkakqRmhoYkqZmhIUlqZmhIkpoZGpKkZoaG\nJKmZoSFJamZoSJKaGRqSpGaGhiSpmaEhSWpmaEiSmhkakqRmhoYkqZmhIUlqZmhIkpoZGpKkZoaG\nJKmZoSFJamZoSJKaDR0aSZYlmUxyMMkDSZbO0Gd1kp1JHkvyaJLr+touSvJgkj1JvpPkLV39miQv\ndPV7ktw+7BglSfMrVTXciclm4Jmq2pzkRuD0qtow0GcFsKKq9iZZDDwEXF1VB5LsAj5dVV9LchXw\n8aq6LMka4J6qeuOvef2anh5u7JI0rpYsCVWVYc8fZXtqHbC1K28FrhnsUFWHq2pvV34e2A+c0TX/\nBHhtV14K/HiEsUiSXgajrDSeq6rTu3KAn714PEv/NcA3gPOr6vkkfxv4FlD0wuttVfWjrt+jwOPA\nXwH/uqq+NcP1XGlI0gkadaWxaK7GJJPAihmabuk/qKpKMusneLc1dTdwfbfiANgCXFdVX03yHuAO\n4ArgKWB1VT2X5EJgW5Lzq2p68LobN976UnliYi0TE2vnejuSNHampnYxNbVr3q43ykrjALC2qg4n\nWQnsrKpzZ+h3KnAvsKOqbuur/3lV/U5XDnC0ql47w/k7gY9V1cMD9a40JOkELeQ9je3A+q68Htg2\n2KELgy3Avv7A6DyR5B1d+XLgYHfO65Kc0pXPAs4GfjDCOCVJ82SUlcYy4C7g9cCTwHur6miSVcDn\nqurdSS4Fvgl8l969C4Cbqur+JG8G/gR4DfAC8OGq2pPkHwP/BjgG/Ar4RFXdN8Pru9KQpBM06kpj\n6NBYaIaGJJ24hdyekiSNGUNDktTM0JAkNTM0JEnNDA1JUjNDQ5LUzNCQJDUzNCRJzQwNSVIzQ0OS\n1MzQkCQ1MzQkSc0MDUlSM0NDktTM0JAkNTM0JEnNDA1JUjNDQ5LUzNCQJDUzNCRJzQwNSVIzQ0OS\n1Gzo0EiyLMlkkoNJHkiydIY+q5PsTPJYkkeTXNfX9vtJ/keS7ybZnmRJX9tNSR5PciDJu4YdoyRp\nfo2y0tgATFbVOcDXu+NBx4Abqup84GLgI0nO7dr+FPh4Vb0J+CrwrwCSnAe8DzgPuBK4PYkrojlM\nTe1a6CG8YjgXxzkXxzkX82eUD+N1wNauvBW4ZrBDVR2uqr1d+XlgP3BG13x2VU115b8A/klXvhq4\ns6qOVdWTwBPARSOM81XPX4jjnIvjnIvjnIv5M0poLK+qI135CLB8rs5J1gAXALu7qseSXN2V3wOs\n7sqrgEN9px7ieNBIkhbQorkak0wCK2ZouqX/oKoqSc1xncXA3cD13YoD4A+A/5Tkj4HtwC/mGMqs\n15YkvXxSNdzncZIDwNqqOpxkJbCzqs6dod+pwL3Ajqq6bZZrnQP8eVW9NckGgKra1LXdD3yyqnYP\nnGOQSNIQqirDnjtKaGwGnq2qz3Qf9EurasNAn9C73/FsVd0w0Pa7VfV0d5P788BfVtXnuxvhX6B3\nH+MMevc7/m4NO1BJ0rwZ5Z7GJuCKJAeBy7tjkqxKcl/X5xLgWuCyJHu6nyu7tg8k+V/0bo4fqqrP\nA1TVPuAuYB+wA/iwgSFJrwxDrzQkSePnpHz+IcmV3YN/jye5caHH83Ka7YHJloctX62SnNKtYu/p\njsdyLpIsTXJ3kv1J9iV56xjPxU3d78j3knwhyWvGZS6S3JHkSJLv9dXN+t5P9GHqky40kpwC/Gd6\nD/6dR2+b6w0LO6qX1UwPTL6BtoctX62up7ed+eKyeVzn4j8C/62q3gC8CTjAGM5F9/X+fwFcWFVv\nBE4B3s/4zMWf0ft87Dfjex/mYeqTLjTo3SB/oqqerKpjwBfpPRA4FuZ4YPLXPmz5apTk94B/QO8v\nDLz4jZCxm4skrwUmquoOgKr6ZVX9FWM4F8DP6f3j6reSLAJ+C3iKMZmL7qHp5waqZ3vvJ/ww9ckY\nGmcAP+o7HtuH/wYemDyhhy1fRf4DvT9B86u+unGcizOBp5P8WZKHk3wuyW8zhnNRVT8D/h3wv+mF\nxdGqmmQM56LPbO/9hB+mPhlDwzv3vPTA5JfpPTA53d/WfdvsVT9PSf4h8NOq2sPxVcb/Z1zmgt6D\nuhcCt1fVhcD/YWD7ZVzmIsnfAf4lsIbeh+LiJNf29xmXuZhJw3ufc15OxtD4Mcf/5Ahd+dAsfV+V\nugcmv0zvgchtXfWRJCu69pXATxdqfC+jvw+sS/JD4E7g8iR/znjOxSF6X13/Tnd8N70QOTyGc/Fm\n4L9X1bNV9UvgK8DbGM+5eNFsvxODn6e/19XN6mQMjf8JnJ1kTZLT6N3E2b7AY3rZdA9MbgH2DTxh\nvx1Y35XXA9sGz321qaqbq2p1VZ1J70bnX1bVP2U85+Iw8KPurysAvBN4DLiHMZsLel8AuDjJ3+x+\nX95J74sS4zgXL5rtd2I78P4kpyU5EzgbeHCuC52Uz2kkuQq4jd63IrZU1acXeEgvmySXAt8Evsvx\nZeRN9P5H3wW8HngSeG9VHV2IMS6EJO8APlZV65IsYwznIsnv0/tCwGnA94F/Ru93ZBzn4uP0Phx/\nBTwM/CGwhDGYiyR3Au8AXkfv/sUngP/KLO89yc30/hbgL+ltd39tzuufjKEhSVoYJ+P2lCRpgRga\nkqRmhoYkqZmhIUlqZmhIkpoZGpKkZoaGJKmZoSFJavb/ABCJnlSz3beRAAAAAElFTkSuQmCC\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x110e63ef0>"
+       "<matplotlib.figure.Figure at 0x114e37eb8>"
       ]
      },
      "metadata": {},
@@ -343,8 +343,7 @@
    ],
    "source": [
     "df = pd.read_csv('../../datasets/ozone.csv')\n",
-    "df = df.dropna()\n",
-    "df.shape"
+    "df = df.dropna()"
    ]
   },
   {
