--- a/06_scikit_regression/py/L6 OLS vs Ridge.ipynb
+++ b/06_scikit_regression/py/L6 OLS vs Ridge.ipynb
@@ -53,9 +53,7 @@
     "# .T is the transpose operator  \n",
     "X_train = np.c_[.5, 1].T\n",
     "y_train = [.5, 1]\n",
-    "X_test = np.c_[0, 2].T\n",
-    "\n",
-    "\n"
+    "X_test = np.c_[0, 2].T\n"
    ]
   },
   {
